@@ -1,3 +1,8 @@
+2013-12-05  Tejas Belagod  <tejas.belagod@arm.com>
+
+	* rtlanal.c (set_noop_p): Return nonzero in case of redundant vec_select
+	for overlapping register lanes.
+
 2013-11-26  Yufeng  <yufeng.zhang@arm.com>
 
 	* config/arm/arm.c (arm_legitimize_address): Check xop1 is not
